[gd_scene load_steps=18 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Area2D.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Dialogue.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=5]
[ext_resource path="res://addons/GodotTIE/text_interface_engine.gd" type="Script" id=8]
[ext_resource path="res://font/JosefinSans-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://font/JosefinSans-Bold.ttf" type="DynamicFontData" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 32.1084

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64, 64 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 9 )

[sub_resource type="Theme" id=4]
Button/colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFont" id=8]
size = 24
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="DynamicFont" id=10]
size = 40
font_data = ExtResource( 10 )

[node name="World" type="Node"]

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 509.941, 306.05 )
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 1 )

[node name="Collider" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true

[node name="NPC-Test" type="Node2D" parent="."]
position = Vector2( 288, 224 )

[node name="Sprite" type="Sprite" parent="NPC-Test"]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="NPC-Test"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC-Test/Area2D"]
shape = SubResource( 2 )

[node name="Interact-Dialogue" type="RichTextLabel" parent="NPC-Test/Area2D"]
visible = false
margin_left = -47.0
margin_top = -60.0
margin_right = 63.0
margin_bottom = -45.0
size_flags_stretch_ratio = 0.0
text = "Press E to Talk"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="Dialogue" type="Control" parent="CanvasLayer"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg_sprite" type="Sprite" parent="CanvasLayer/Dialogue"]
position = Vector2( 944, 560 )
scale = Vector2( 1.69444, 1.72839 )

[node name="Tie" type="ReferenceRect" parent="CanvasLayer/Dialogue"]
margin_left = 1200.0
margin_top = 350.0
margin_right = 1800.0
margin_bottom = 650.0
size_flags_vertical = 3
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
FONT = SubResource( 3 )

[node name="choice1" type="Button" parent="CanvasLayer/Dialogue"]
visible = false
margin_left = 675.0
margin_top = 225.0
margin_right = 687.0
margin_bottom = 255.0
rect_pivot_offset = Vector2( -67, -1 )
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_hover = Color( 0.705882, 0.705882, 0.705882, 1 )
action_mode = 0
enabled_focus_mode = 0
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="choice2" type="Button" parent="CanvasLayer/Dialogue"]
visible = false
margin_left = 675.0
margin_top = 225.0
margin_right = 687.0
margin_bottom = 255.0
rect_pivot_offset = Vector2( -67, -1 )
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_hover = Color( 0.705882, 0.705882, 0.705882, 1 )
action_mode = 0
enabled_focus_mode = 0
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="choice4" type="Button" parent="CanvasLayer/Dialogue"]
visible = false
margin_left = 675.0
margin_top = 225.0
margin_right = 687.0
margin_bottom = 255.0
rect_pivot_offset = Vector2( -67, -1 )
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_hover = Color( 0.480469, 0.480469, 0.480469, 1 )
custom_colors/font_color_pressed = Color( 0.482353, 0.482353, 0.482353, 1 )
action_mode = 0
enabled_focus_mode = 0
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="choice3" type="Button" parent="CanvasLayer/Dialogue"]
visible = false
margin_left = 675.0
margin_top = 225.0
margin_right = 687.0
margin_bottom = 255.0
rect_pivot_offset = Vector2( -67, -1 )
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_hover = Color( 0.705882, 0.705882, 0.705882, 1 )
action_mode = 0
enabled_focus_mode = 0
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="CanvasLayer/Dialogue"]
margin_left = 1200.0
margin_top = 295.0
margin_right = 1800.0
margin_bottom = 350.0
size_flags_vertical = 2
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Alice"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="npc_sprite" type="Sprite" parent="CanvasLayer/Dialogue"]
position = Vector2( 400, 500 )
[connection signal="buff_end" from="CanvasLayer/Dialogue/Tie" to="CanvasLayer/Dialogue" method="_on_Tie_buff_end"]
[connection signal="pressed" from="CanvasLayer/Dialogue/choice1" to="CanvasLayer/Dialogue" method="_on_choice1_pressed"]
[connection signal="pressed" from="CanvasLayer/Dialogue/choice2" to="CanvasLayer/Dialogue" method="_on_choice2_pressed"]
[connection signal="pressed" from="CanvasLayer/Dialogue/choice4" to="CanvasLayer/Dialogue" method="_on_choice4_pressed"]
[connection signal="pressed" from="CanvasLayer/Dialogue/choice3" to="CanvasLayer/Dialogue" method="_on_choice3_pressed"]
